--- a/test.bib
+++ b/test.bib
@@ -1,1 +1,9 @@
+@Book{erw1988,
+  author    = {erw},
+  editor    = {kjk},
+  publisher = {,mnm,},
+  title     = {kjknm},
+  year      = {1988},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
