--- a/test.bib
+++ b/test.bib
@@ -15,7 +15,6 @@
 }
 
 @Article{AguiarSilva2025,
-  author    = {Aguiar Silva, Claysson and Aguiar, Ludmilla M. S.},
   journal   = {Urban Ecosystems},
   title     = {City lights, moonlit nights: examining bat responses to urbanization and lunar cycles},
   year      = {2025},
@@ -46,6 +45,34 @@
   doi       = {10.1007/s11801-025-4185-7},
   file      = {:http\://link.springer.com/openurl/pdf?id=doi\:10.1007/s11801-025-4185-7:PDF},
   publisher = {Springer},
+}
+
+@InCollection{Toemmel2025,
+  author    = {Tömmel, Tatjana Noemi},
+  booktitle = {Handbuch Medizin und Lebenszeit},
+  publisher = {Springer},
+  title     = {Die gelingende Zeitlichkeit der Geburt},
+  year      = {2025},
+  isbn      = {978-3-662-68418-4},
+  month     = jan,
+  abstract  = {Das Gelingen einer Geburt spielt für ein gutes Leben eine herausragende Rolle. Die Zeitlichkeit der Geburt ist dabei von vielfacher Bedeutung, und zwar sowohl im Sinne der objektivierbaren physikalischen Zeit als auch im Sinne des subjektiven Zeiterlebens . Da eine Geburt nicht nur durch ihr Ergebnis gut wird, sondern idealerweise auch einen guten Verlauf nimmt, sind zeitliche Phänomene wie Zeitpunkt, Dauer, Tempo und Frequenz wichtige Bewertungsmaßstäbe für die Qualität einer Geburt. Obwohl Geburten grundsätzlich als physiologische, nicht pathologische, Vorgänge angesehen werden müssen, sind sie mit gesundheitlichen Risiken verbunden und werden in der westlichen Welt heute fast immer medizinisch überwacht. Zeitliche Parameter spielen sowohl für die medizinische Beurteilung als auch für das subjektive Geburtserleben eine wichtige Rolle. Die medizinische Perspektive auf die Geburt deckt sich dabei nicht notwendigerweise mit dem individuellen Erleben der Gebärenden, sondern kann in einem Spannungsverhältnis zu diesem stehen. Da geburtshelferische Interventionen häufig das Zeitmanagement der Geburt betreffen, zeigt sich dies auch in unterschiedlichen Auffassungen darüber, wie sehr die Eigenzeitlichkeit der Geburt zu respektieren oder zu manipulieren ist. In den letzten Jahren ist dieser Aspekt der Zeitlichkeit innerhalb der Ethik der Geburtshilfe vermehrt beachtet worden: Eine gute Geburt als Teil eines guten Lebens erfordert einen achtsamen Umgang mit ihrer Zeitlichkeit. Die gelingende Zeitlichkeit der Geburt besteht dabei nicht in einer Idealisierung ihrer Eigenzeitlichkeit, sondern in einer ausgewogenen Perspektive, welche die physiologische Dynamik, medizinische Erfordernisse und mütterliche Präferenzen gleichermaßen im Blick hält. In diesem Artikel wird zuerst ein Überblick über objektiv messbare Zeitparameter der Geburt und medizinische Normwerte gegeben. Anschließend wird die biografische Bedeutung der Geburt sowie die subjektive Zeitwahrnehmung unter der Geburt und ihr Verhältnis zur Bewertung des Geburtserlebens diskutiert.},
+  date      = {2025-01-01},
+  doi       = {10.1007/978-3-662-68418-4_33-1},
+  file      = {:Toemmel2025 - Die Gelingende Zeitlichkeit Der Geburt.pdf:PDF:http\://link.springer.com/openurl/pdf?id=doi\:10.1007/978-3-662-68418-4_33-1},
+}
+
+@InCollection{Noesen2025,
+  author    = {Noesen, Melanie},
+  booktitle = {Portfolioarbeit in der Grundschule},
+  publisher = {Springer},
+  title     = {Ergebnisse},
+  year      = {2025},
+  isbn      = {978-3-658-46405-9},
+  month     = jan,
+  abstract  = {Im Folgenden werden die Ergebnisse der Feldstudie vorgestellt. Hierzu wird die Portfolioarbeit im zweiten Zyklus der Grundschule spiralförmig erschlossen mit dem Ziel, die zentrale Forschungsfrage zur beantworten.},
+  date      = {2025-01-01},
+  doi       = {10.1007/978-3-658-46406-6_5},
+  file      = {:Noesen2025 - Ergebnisse.pdf:PDF:http\://link.springer.com/openurl/pdf?id=doi\:10.1007/978-3-658-46406-6_5},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
