commit test today

--- a/test.bib
+++ b/test.bib
@@ -75,4 +75,9 @@
   file      = {:Noesen2025 - Ergebnisse.pdf:PDF:http\://link.springer.com/openurl/pdf?id=doi\:10.1007/978-3-658-46406-6_5},
 }
 
+@Article{,
+  author = {h§h},
+  title  = {jhkj},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
